@@ -1,0 +1,18 @@
+/**
+ * 
+ */
+package de.xwic.cube.util;
+
+/**
+ * Helper Object to restore Dimension Elements.
+ * @author lippisch
+ */
+class DimElmDef {
+
+	String parentId;
+	String key;
+	String title;
+	double weight;
+	int order_index;
+	
+}
